# evolvim

./: .gitignore  Cargo.toml
evolvim-lib/: Cargo.toml
evolvim-lib/src/lib/: board.rs
evolvim-web/: Cargo.toml
evolvim-web/src/: lib.rs
evolvim-web/www/: index.html  index.js  package-lock.json  package.json
